<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/application_navigation_graph"
    app:startDestination="@id/loginScreen">

    <fragment
        android:id="@+id/loginScreen"
        android:name="com.uzair.shoemate.screens.LoginScreen"
        android:label="@string/title_login_screen"
        tools:layout="@layout/login_screen_fragment">
        <action
            android:id="@+id/action_loginScreen_to_onBoardingScreen"
            app:destination="@id/onBoardingScreen"
            app:enterAnim="@anim/anim_screen_slide_in_right"
            app:exitAnim="@anim/anim_screen_slide_out_left"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/anim_screen_slide_in_left"
            app:popExitAnim="@anim/anim_screen_slide_out_right"
            app:popUpTo="@id/loginScreen"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/onBoardingScreen"
        android:name="com.uzair.shoemate.screens.OnBoardingScreen"
        android:label="@string/title_welcome_screen"
        tools:layout="@layout/on_boarding_screen_fragment">
        <action
            android:id="@+id/action_onBoardingScreen_to_instructionScreen"
            app:destination="@id/instructionScreen"
            app:enterAnim="@anim/anim_screen_slide_in_right"
            app:exitAnim="@anim/anim_screen_slide_out_left"
            app:popEnterAnim="@anim/anim_screen_slide_in_left"
            app:popExitAnim="@anim/anim_screen_slide_out_right"
            app:popUpTo="@id/onBoardingScreen"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/instructionScreen"
        android:name="com.uzair.shoemate.screens.InstructionScreen"
        android:label="@string/title_instruction_screen"
        tools:layout="@layout/instruction_screen_fragment">
        <action
            android:id="@+id/action_instructionScreen_to_shoeListingScreen"
            app:destination="@id/shoeListingScreen"
            app:enterAnim="@anim/anim_screen_slide_in_right"
            app:exitAnim="@anim/anim_screen_slide_out_left"
            app:popEnterAnim="@anim/anim_screen_slide_in_left"
            app:popExitAnim="@anim/anim_screen_slide_out_right"
            app:popUpTo="@id/instructionScreen"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeListingScreen"
        android:name="com.uzair.shoemate.screens.ShoeListingScreen"
        android:label="@string/title_list_screen"
        tools:layout="@layout/shoe_list_screen_fragment">
        <action
            android:id="@+id/action_shoeListingScreen_to_shoeDetailsScreen"
            app:destination="@id/shoeDetailsScreen"
            app:enterAnim="@anim/anim_screen_slide_in_right"
            app:exitAnim="@anim/anim_screen_slide_out_left"
            app:popEnterAnim="@anim/anim_screen_slide_in_left"
            app:popExitAnim="@anim/anim_screen_slide_out_right" />
        <action
            android:id="@+id/action_shoeListingScreen_to_loginScreen"
            app:destination="@id/loginScreen"
            app:enterAnim="@anim/anim_screen_slide_in_right"
            app:exitAnim="@anim/anim_screen_slide_out_left"
            app:popEnterAnim="@anim/anim_screen_slide_in_left"
            app:popExitAnim="@anim/anim_screen_slide_out_right"
            app:popUpTo="@id/shoeListingScreen"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailsScreen"
        android:name="com.uzair.shoemate.screens.ShoeDetailsScreen"
        android:label="@string/title_details_screen"
        tools:layout="@layout/shoe_details_screen_fragment" />
</navigation>