<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.uzair.shoemate.view_models.LoginScreenViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/network_config_screen_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/screen_default_margin"
        tools:context=".screens.LoginScreen">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/screen_network_config_guideline_for_background_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/screen_login_background_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/image_margin"
            android:contentDescription="@string/login_image_description"
            android:src="@drawable/ic_login_image"
            app:layout_constraintBottom_toTopOf="@+id/screen_network_config_guideline_for_background_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/screen_login_user_username_edit_text_layout"
            style="@style/EditTextLayoutStyle"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/screen_login_background_image"
            app:startIconDrawable="@drawable/ic_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/screen_login_user_username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/screen_login_user_password_edit_text_layout"
            style="@style/EditTextLayoutStyle"
            android:layout_marginTop="@dimen/margin_top"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/screen_login_user_username_edit_text_layout"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/screen_login_user_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/screen_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/screen_new_login_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/screen_login_user_password_edit_text_layout" />

        <Button
            android:id="@+id/screen_new_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_new_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/screen_login_user_password_edit_text_layout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/screen_login_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>